--- a/shooterdb/templates/club_list.html
+++ b/shooterdb/templates/club_list.html
@@ -17,7 +17,7 @@
                     alt="{{ person.fname }} {{ person.sname }}"> {% endcomment %}
                 <div class="card-body">
                     <h6 class="card-subtitle mb-2 text-muted">Evidenční č. {{ club.club_id }}</h6>
-                    <h4 class="card-title">{{ club.name }} }}</h4>
+                    <h4 class="card-title">{{ club.name }}</h4>
                     <p class="card-text">
                     </p>
                     <a href="{% url 'club_detail' club.club_id %}" class="btn btn-primary mt-2">Více informací</a>
