--- a/shooterdb/templates/navbar.html
+++ b/shooterdb/templates/navbar.html
@@ -29,7 +29,9 @@
                         href="{% url 'index' %}">Domů</a>
                 </li>
                 <li class="nav-item"><a class="nav-link text-white" href="/persons">Členové</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/competitions">Soutěže</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="/clubs">Kluby</a></li>
+                <li class="nav-item"><a class="nav-link text-white" href="/guns">Zbraně</a></li>
                 <li class="nav-item"><a class="nav-link text-white" href="/admin">Admin</a></li>
             </ul>
         </div>
