--- a/shooterdb/templates/gun_list.html
+++ b/shooterdb/templates/gun_list.html
@@ -5,7 +5,7 @@
 <div class="container">
     <div class="row m-3">
         <div class="col-sm-12">
-            <h2 class="display-3 text-center">Seznam Klubů</h2>
+            <h2 class="display-3 text-center">Seznam Zbraní</h2>
         </div>
     </div>
     <div class="row m-3">
@@ -13,33 +13,33 @@
             <form method="get">
                 <div class="input-group mb-3">
                     <span class="input-group-text" id="inputGroup-sizing-default">Hledat</span>
-                    <input type="text" class="form-control" name="q" placeholder="podle Názvu a ID" />
+                    <input type="text" class="form-control" name="q" placeholder="podle Modelu a Značky" />
                     <button class="btn btn-outline-primary" type="submit" id="button-addon2">Vyhledat</button>
                 </div>
             </form>
         </div>
         <div class="col-lg-6">
             <button class="btn btn-primary float-end" type="button" id="button-addon2"><i class="bi bi-plus"></i> <a
-                    href="{% url 'club_create' %}" class="text-white text-decoration-none">Přidat klub</a>
+                    href="{% url 'gun_create' %}" class="text-white text-decoration-none">Přidat zbraň</a>
             </button>
         </div>
     </div>
     <div class="row">
-        {% for club in clubs %}
+        {% for gun in guns %}
         <div class="col-sm-6 col-md-4 col-lg-3 col-xl-3">
             <div class="card text-center shadow mb-5 bg-body rounded">
                 <div class="card-body">
-                    <h6 class="card-subtitle mb-2 text-muted">Evidenční č. {{ club.club_id }}</h6>
-                    <h4 class="card-title">{{ club.name }}</h4>
+                    <h6 class="card-subtitle mb-2 text-muted">{{ gun.gun_type }}</h6>
+                    <h4 class="card-title">{{ gun.brand }} - {{ gun.model }}</h4>
                     <p class="card-text">
+                        {{ gun.owner.person.fname }} {{ gun.owner.person.sname }} - {{ gun.owner.person.club.name }}
                     </p>
-                    <a href="{% url 'club_detail' club.club_id %}" class="btn btn-primary mt-2">Více informací</a>
                 </div>
             </div>
         </div>
         {% empty %}
         <div>
-            <h4 class="text-center">Žádné kluby nenalezené</h4>
+            <h4 class="text-center">Žádné zbraně nenalezeny</h4>
         </div>
         {% endfor %}
     </div>
