--- a/shooterdb/templates/person_detail.html
+++ b/shooterdb/templates/person_detail.html
@@ -49,40 +49,48 @@
     </div>
     <div class="row gx-4 gx-lg-5 align-items-center my-5">
         <div class="col">
-            <h2 class="pb-3">Výsledky závodů</h2>
-            {% if is_shooter %}
-            
-            {% for discipline, results in results_by_discipline.items %}
-            <h4>Disciplína: {{ discipline }}</h4>
-            <table class="table table-bordered table-sm">
-                <thead>
-                <tr>
-                    <th>Závod</th>
-                    <th>Datum</th>
-                    <th>Skóre</th>
-                    <th>Pořadí</th>
-                    {% for i in results.0.series %}
-                    <th>Položka {{ forloop.counter }}</th>
-                    {% endfor %}
-                </tr>
-                </thead>
-                <tbody>
-                {% for result in results %}
-                <tr>
-                    <td>{{ result.competition.name }}</td>
-                    <td>{{ result.competition.date|date:"j. E Y" }}</td>
-                    <td>{{ result.score }}</td>
-                    <td>{{ result.rank }}</td>
-                    {% for value in result.series %}
-                    <td>{{ value }}</td>
-                    {% endfor %}
-                </tr>
-                {% endfor %}
-                </tbody>
-            </table>
-            {% endfor %}
-
-            {% endif %}
+            <div class="row">
+                <div class="col-lg-6">
+                    <h2 class="pb-3">Výsledky závodů</h2>
+                </div>
+                <div class="col-lg-6">
+                    <button class="btn btn-primary float-end" type="button" id="button-addon2"><i
+                            class="bi bi-plus"></i> <a href="" class="text-white text-decoration-none">Přidat výsledek</a>
+                    </button>
+                </div>
+            </div>
+            <div class="row">
+                {% if is_shooter %}
+                <table class="table table-bordered table-sm">
+                    <thead>
+                        <tr>
+                            <th>Pořadí</th>
+                            <th>Závod</th>
+                            <th>Datum</th>
+                            {% for i in results.0.series %}
+                            <th>Položka {{ forloop.counter }}</th>
+                            {% endfor %}
+                            <th>Skóre</th>
+                            <th>Střed</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for result in results %}
+                        <tr>
+                            <td>{{ result.rank }}</td>
+                            <td>{{ result.competition.name }}</td>
+                            <td>{{ result.competition.date|date:"j. E Y" }}</td>
+                            {% for value in result.series %}
+                            <td>{{ value }}</td>
+                            {% endfor %}
+                            <td>{{ result.score }}</td>
+                            <td>{{ result.center }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+                {% endif %}
+            </div>
         </div>
     </div>
 </div>
