--- a/shooterdb/templates/person_detail.html
+++ b/shooterdb/templates/person_detail.html
@@ -55,7 +55,7 @@
                 </div>
                 <div class="col-lg-6">
                     <button class="btn btn-primary float-end" type="button" id="button-addon2"><i
-                            class="bi bi-plus"></i> <a href="" class="text-white text-decoration-none">Přidat výsledek</a>
+                            class="bi bi-plus"></i> <a href="{% url 'result_create' %}" class="text-white text-decoration-none">Přidat výsledek</a>
                     </button>
                 </div>
             </div>
